--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -34,7 +34,7 @@
            routerLinkActive="active">Contacts</a>
       </li>
       <li class="header-nav__list-item">
-        <a href="#">Change Theme</a>
+        <a (click)="toggleTheme()">Change Theme</a>
       </li>
     </ul>
   </nav>
