--- a/src/app/components/projects/projects.html
+++ b/src/app/components/projects/projects.html
@@ -10,7 +10,7 @@
       </a>
       <ul>
 
-        <li *ngFor="let item of project.stack">{{item}}</li>
+        <li class="el" *ngFor="let item of project.stack">{{item}}</li>
       </ul>
     </div>
   </section>
