--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -11,7 +11,6 @@
       display: inline-block;
       margin: 0.15em;
       position: relative;
-      //font-size: 1.2em;
 
       a {
         display: inline-block;
@@ -22,8 +21,9 @@
           width: 5rem;
           height: 5rem;
           display: block;
-          background: linear-gradient(45deg, var(--color-primary-light), var(--color-primary-dark));
+          background: linear-gradient(45deg, var(--primary-default), var(--primary-default));
           transition: all 265ms ease-out;
+          box-shadow: var(--background-default-shadow);
         }
 
         &:hover:before {
@@ -33,8 +33,8 @@
 
         &:hover i {
           transform: scale(2);
-          color: var(--color-primary);
-          background: -webkit-linear-gradient(45deg, var(--color-primary-light), var(--color-primary-dark));
+          color: var(--primary-default);
+          background: -webkit-linear-gradient(45deg, var(--primary-default), var(--primary-default));
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
           transition: all 265ms ease-in;
@@ -42,7 +42,7 @@
       }
 
       i {
-        color: var(--color-white);
+        color: var(--background-default);
         position: absolute;
         font-size: 3rem;
         top: 0.5rem;
