--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -18,7 +18,7 @@
     .card {
       position: relative;
 
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      box-shadow: var(--background-default-shadow);
       transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 
       padding: 2rem;
@@ -33,7 +33,7 @@
       }
 
       img {
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        box-shadow: var(--background-default-shadow);
         width: 100%;
       }
 
@@ -42,20 +42,18 @@
         display: flex;
         justify-content: space-evenly;
         flex-wrap: wrap;
-        margin: 1rem;
 
         li {
-          display: inline-block;
-          border-radius: 100%;
           padding: 1rem;
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-          color: var(--color-white);
-          background-color: var(--color-primary-light);
+          box-shadow: var(--background-default-shadow);
+          border: 1px solid var(--primary-default);
+          transform: skew(-10deg);
+          margin: .5rem;
         }
       }
 
       &:hover {
-        box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+        box-shadow: var(--background-dark-shadow);
       }
     }
   }
