--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -34,7 +34,10 @@
            routerLinkActive="active">Contacts</a>
       </li>
       <li class="header-nav__list-item">
-        <a (click)="toggleTheme()">Change Theme</a>
+        <label class="switch">
+          <input type="checkbox" (change)="toggleTheme()">
+          <span class="slider round"></span>
+        </label>
       </li>
     </ul>
   </nav>
