add resume / fix styling

--- a/src/app/components/contacts/contacts.scss
+++ b/src/app/components/contacts/contacts.scss
@@ -26,6 +26,11 @@
       border: 1px solid var(--primary-default);
       color: inherit;
     }
+
+    textarea {
+      resize: vertical;
+      min-height: 10rem;
+    }
   }
 }
 
