--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -2,9 +2,9 @@
   <section class="main-left">
     <div class="main-left-header">
       <img src="../assets/vitaliilynnyk.png"
-           alt="logo"/>
+           alt="logo" />
       <h1>Vitalii Lynnyk</h1>
-      <p>Junior javaScript dev</p>
+      <p>Student. Dreamer. Nature lover.</p>
     </div>
     <details class="main-left-details">
       <summary>
@@ -13,7 +13,7 @@
       </summary>
       <p>
         I'm passionate about programming.<br>
-        I graduated Cherkasy state technological University Software Engineering,
+        I graduated Cherkasy State Technological University, <br>Software Engineering,
         Bachelor degree with honors. <br> Every day i learn something new.
         <br>
         <a href="../../../assets/cv/CV_VitaliiLynnyk_v1.pdf"
