--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -22,6 +22,7 @@
       color: var(--primary-default);
 
       img {
+        max-width: 20rem;
         border-radius: 50%;
         box-shadow: var(--background-default-shadow);
       }
@@ -32,19 +33,14 @@
       }
 
       p {
-
       }
     }
 
     &-details {
-      text-align: center;
+      text-align: right;
     }
 
     &-footer {
-      h5 {
-
-      }
-
       ul {
         list-style: none;
         display: flex;
@@ -69,7 +65,7 @@
       text-transform: uppercase;
 
       li {
-        padding: .5rem;
+        padding: 0.5rem;
         font-weight: 900;
 
         img {
@@ -94,7 +90,7 @@
   transition: all 265ms ease-in;
 
   &:hover {
-    transform: translateY(.1rem);
+    transform: translateY(0.1rem);
   }
 
   &--blue {
