--- a/src/app/components/contacts/contacts.scss
+++ b/src/app/components/contacts/contacts.scss
@@ -35,7 +35,7 @@
 }
 
 .is-invalid {
-  border: 1px solid var(--danger-color) !important;
+  border: 1px solid var(--danger-color);
 }
 
 .invalid-error {
