--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,104 +1,120 @@
 <main class="main">
-  <section class="main-left">
-    <div class="main-left-header">
+  <section class="main-left padding-10-25-5-25">
+    <div class="header">
       <img src="../assets/vitaliilynnyk.png"
-           alt="logo" />
-      <h1>Vitalii Lynnyk</h1>
-      <p>Student. Dreamer. Nature lover.</p>
+           class="img"
+           alt="logo"/>
+      <h1 class="title">Vitalii Lynnyk</h1>
+      <p class="title-sub">Student. Dreamer. Nature lover.</p>
     </div>
-    <details class="main-left-details">
+    <details class="margin-2-0">
       <summary>
         Hello, i'm developer, from Cherkasy, Ukraine, currently living in Warsaw, Poland.<br>
         Today, i'm a student of Vistula University, Computer Engineering, Masters degree.
       </summary>
       <p>
         I'm passionate about programming.<br>
-        I graduated Cherkasy State Technological University, <br>Software Engineering,
+        I graduated Cherkasy State Technological University, Software Engineering,
         Bachelor degree with honors. <br> Every day i learn something new.
         <br>
         <a href="../../../assets/cv/CV_VitaliiLynnyk_v1.pdf"
-           class="btn btn--blue btn--center">Download CV</a>
+           class="btn btn--blue">Download CV</a>
       </p>
     </details>
   </section>
-  <section class="main-right">
-    <h3 class="main-right__title">Skills</h3>
-    <ul class="main-right__list">
+  <section class="main-right padding-10-25-5-25">
+    <h3 class="title margin-2-0">Skills</h3>
+    <ul class="list">
       <li>
         <img src="../assets/techIcons/w3_html5-icon.svg"
+             class="img-svg"
              alt="html">
-        <p>html</p>
+        <p class="title-sub">html</p>
       </li>
       <li>
         <img src="../assets/techIcons/sass-lang-icon.svg"
+             class="img-svg"
              alt="sass">
-        <p>sass</p>
+        <p class="title-sub">sass</p>
       </li>
       <li>
         <img src="../assets/techIcons/javascript-icon.svg"
+             class="img-svg"
              alt="javaScript">
-        <p>javaScript</p>
+        <p class="title-sub">javaScript</p>
       </li>
       <li>
         <img src="../assets/techIcons/nodejs-horizontal.svg"
+             class="img-svg"
              alt="node.js">
-        <p>Node.js</p>
+        <p class="title-sub">Node.js</p>
       </li>
       <li>
         <img src="../assets/techIcons/angular-icon.svg"
+             class="img-svg"
              alt="angular">
-        <p>angular</p>
+        <p class="title-sub">Angular</p>
       </li>
       <li>
         <img src="../assets/techIcons/reactjs-icon.svg"
+             class="img-svg"
              alt="react">
-        <p>react</p>
+        <p class="title-sub">React</p>
       </li>
 
       <li>
         <img src="../assets/techIcons/typescriptlang-icon.svg"
+             class="img-svg"
              alt="typeScript">
-        <p>TypeScript</p>
+        <p class="title-sub">TypeScript</p>
       </li>
       <li>
         <img src="../assets/techIcons/java-icon.svg"
+             class="img-svg"
              alt="java">
-        <p>Java</p>
+        <p class="title-sub">Java</p>
       </li>
       <li>
         <img src="../assets/techIcons/android-icon.svg"
+             class="img-svg"
              alt="android">
-        <p>android</p>
+        <p class="title-sub">android</p>
       </li>
       <li>
         <img src="../assets/techIcons/mongodb-icon.svg"
+             class="img-svg"
              alt="mongoDb">
-        <p>MongoDb</p>
+        <p class="title-sub">MongoDb</p>
       </li>
       <li>
         <img src="../assets/techIcons/postgresql-icon.svg"
+             class="img-svg"
              alt="postgreSql">
-        <p>PostgreSql</p>
+        <p class="title-sub">PostgreSql</p>
       </li>
       <li>
         <img src="../assets/techIcons/firebase-icon.svg"
+             class="img-svg"
              alt="firebase">
-        <p>Firebase</p>
+        <p class="title-sub">Firebase</p>
       </li>
       <li>
         <img src="../assets/techIcons/sqlite-icon.svg"
+             class="img-svg"
              alt="sqlLite">
-        <p>SqlLite</p>
+        <p class="title-sub">SqlLite</p>
       </li>
       <li>
         <img src="../assets/techIcons/js_webpack-icon.svg"
+             class="img-svg"
              alt="webpack">
-        <p>webpack</p>
+        <p class="title-sub">Webpack</p>
       </li>
       <li>
         <img src="../assets/techIcons/docker-icon.svg"
+             class="img-svg"
              alt="Docker">
-        <p>Docker</p>
+        <p class="title-sub">Docker</p>
       </li>
     </ul>
   </section>
