--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -8,73 +8,68 @@
   }
 
   &-left {
-    padding: 10rem 2.5rem 5rem 2.5rem;
-    display: grid;
-    grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 1rem;
+    text-align: center;
 
-    @media (max-width: 730px) {
-      padding-bottom: 0;
-    }
-
-    &-header {
-      text-align: center;
+    .header {
       color: var(--primary-default);
-
-      img {
-        max-width: 20rem;
-        border-radius: 50%;
-        box-shadow: var(--background-default-shadow);
-      }
-
-      h1 {
-        text-transform: uppercase;
-        font-weight: 800;
-      }
-    }
-
-    &-details {
-      text-align: right;
-    }
-
-    &-footer {
-      ul {
-        list-style: none;
-        display: flex;
-      }
     }
   }
 
-  &-right {
+  .margin-2-0 {
+    margin: 2rem 0;
+  }
+
+  .padding-10-25-5-25 {
     padding: 10rem 2.5rem 5rem 2.5rem;
 
-    &__title {
-      font-size: 5rem;
+    @media (max-width: 730px) {
+      padding: 5rem 2.5rem 2rem 2.5rem;
     }
+  }
+}
 
-    &__list {
-      list-style: none;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      grid-auto-rows: auto;
-      grid-gap: 2rem;
-      text-align: center;
-      text-transform: uppercase;
+.list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-auto-rows: auto;
+  grid-gap: 2rem;
+  text-align: center;
+  text-transform: uppercase;
 
-      li {
-        padding: 0.5rem;
-        font-weight: 900;
+  li {
+    padding: 0.5rem;
+    font-weight: 900;
 
-        img {
-          filter: var(--img-filter);
-          cursor: pointer;
-
-          &:hover {
-            filter: none;
-          }
-        }
+    &:hover {
+      .img-svg {
+        filter: none;
       }
     }
+  }
+}
+
+.img {
+  max-width: 20rem;
+  border-radius: 50%;
+  box-shadow: var(--background-default-shadow);
+
+  &-svg {
+    filter: var(--img-filter);
+    cursor: pointer;
+  }
+}
+
+.title {
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 800;
+
+  &-sub {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 400;
+    cursor: pointer;
   }
 }
 
@@ -92,9 +87,5 @@
 
   &--blue {
     border: 1px solid var(--primary-default);
-  }
-
-  &--center {
-    margin: 1rem auto;
   }
 }
