--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,7 +1,7 @@
 <main class="main">
   <section class="main-left padding-10-25-5-25">
     <div class="header">
-      <img src="../assets/vitaliilynnyk.png"
+      <img src="../assets/vitaliilynnyk.jpg"
            class="img"
            alt="logo"/>
       <h1 class="title">Vitalii Lynnyk</h1>
@@ -17,7 +17,7 @@
         I graduated Cherkasy State Technological University, Software Engineering,
         Bachelor degree with honors. <br> Every day i learn something new.
         <br>
-        <a href="../../../assets/cv/CV_VitaliiLynnyk_v1.pdf"
+        <a href="../assets/cv/CV_VitaliiLynnyk_v1.pdf"
            class="btn btn--blue">Download CV</a>
       </p>
     </details>
