--- a/src/app/components/resume/resume.html
+++ b/src/app/components/resume/resume.html
@@ -1,6 +1,6 @@
 <main class="main">
   <section class="main__left">
-    <img src="../../../assets/vitaliilynnyk.png"
+    <img src="../assets/vitaliilynnyk.jpg"
          class="img">
     <div class="section-headline">
       Contact
