rewrite theme colors, shadows

--- a/src/app/components/contacts/contacts.html
+++ b/src/app/components/contacts/contacts.html
@@ -1,6 +1,6 @@
 <main class="main">
-  <h1 class="main__title title">Contact me</h1>
-  <h2 class="main__title-sub title">i'll be glad to answer your questions</h2>
+  <h1 class="title">Contact me</h1>
+  <h2 class="title title-sub">i'll be glad to answer your questions</h2>
   <form (ngSubmit)="sendMsg(f); f.reset();"
         #f="ngForm">
     <label for="name"></label>
