--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -12,7 +12,8 @@
          target="_blank"><i class="mdi mdi-facebook"></i></a></li>
   </ul>
   <div class="footer-about">
-    <p>created by <a href="#">Vitalii lynnyk</a></p>
+    <p>created by <a routerLink="home"
+         class="color-blue">Vitalii lynnyk</a></p>
     <p>Copyright © 2020 | All Rights Reserved</p>
   </div>
 </footer>
