--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -3,22 +3,24 @@
     <div class="header">
       <img src="../assets/vitaliilynnyk.jpg"
            class="img"
-           alt="logo"/>
+           alt="logo" />
       <h1 class="title">Vitalii Lynnyk</h1>
       <p class="title-sub">Student. Dreamer. Nature lover.</p>
     </div>
     <details class="margin-2-0">
       <summary>
-        Hello, i'm developer, from Cherkasy, Ukraine, currently living in Warsaw, Poland.<br>
-        Today, i'm a student of Vistula University, Computer Engineering, Masters degree.
+        Hello, i'm <span class="blue-color">developer</span>, from Cherkasy, <span class="blue-color">Ukraine</span>,
+        currently living in Warsaw,
+        Poland.<br>
+        Today, i'm a student of Vistula University, <span class="blue-color">Computer Engineering</span>, Masters
+        degree.<br>
+        <a href="../assets/cv/CV_VitaliiLynnyk_v1.pdf"
+           class="btn btn--blue">Download CV</a>
       </summary>
       <p>
         I'm passionate about programming.<br>
-        I graduated Cherkasy State Technological University, Software Engineering,
+        I graduated Cherkasy State Technological University, <span class="blue-color">Software Engineering</span>,
         Bachelor degree with honors. <br> Every day i learn something new.
-        <br>
-        <a href="../assets/cv/CV_VitaliiLynnyk_v1.pdf"
-           class="btn btn--blue">Download CV</a>
       </p>
     </details>
   </section>
