--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -4,7 +4,6 @@
   &__title {
     font-weight: 700;
     margin-bottom: 2rem;
-    text-shadow: var(--text-default-shadow);
   }
 
   &__section {
@@ -19,7 +18,7 @@
     .card {
       position: relative;
       box-shadow: var(--background-default-shadow);
-      transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+      transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
       padding: 2rem;
       display: grid;
       grid-template-rows: auto 1fr auto;
@@ -27,7 +26,7 @@
 
       h2 {
         text-align: center;
-        text-shadow: var(--text-default-shadow);
+        color: var(--primary-default);
       }
 
       img {
@@ -46,7 +45,7 @@
           box-shadow: var(--background-default-shadow);
           border: 1px solid var(--primary-default);
           transform: skew(-10deg);
-          margin: .5rem;
+          margin: 0.5rem;
         }
       }
 
