--- a/src/app/components/resume/resume.scss
+++ b/src/app/components/resume/resume.scss
@@ -47,10 +47,15 @@
     align-items: flex-end;
 
     .title {
-      font-size: 3rem;
-
       h2 {
         color: var(--primary-default);
+        font-size: 5rem;
+        font-weight: 900;
+      }
+
+      h3 {
+        font-size: 3rem;
+        text-align: right;
       }
     }
 
@@ -58,6 +63,11 @@
       margin: 1rem;
       padding: 2rem 3rem 2rem 3rem;
       box-shadow: var(--background-default-shadow);
+
+      .headline {
+        font-size: 2rem;
+        font-weight: 900;
+      }
 
       .info {
         padding-top: 1rem;
@@ -69,5 +79,6 @@
     font-size: 2rem;
     padding: 1rem;
     text-transform: uppercase;
+    color: var(--primary-default);
   }
 }
